--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "date-fns": "^2.28.0",
     "firebase": "^9.6.10",
     "firebase-tools": "^10.6.0",
+    "geolib": "^3.3.3",
+    "mapbox-gl": "^2.8.0",
     "next": "latest",
     "react": "^17.0.2",
     "react-date-range": "^1.4.0",
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
+    "react-map-gl": "^7.0.10",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
